# apple-icon-composer-skill

./: .gitignore  .mcp.json  Package.swift  README.md  icon-schema.json  skills
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
Sources/icon-composer-mcp/: IconModel.swift  ToolHandlers.swift  ToolSchemas.swift  ValueJSON.swift  main.swift
fixtures/complex-icon.icon/: icon.json
fixtures/plugin-test.icon/: icon.json
fixtures/scaled-layer.icon/: icon.json
fixtures/simple-image.icon/: icon.json
fixtures/test-generated.icon/: icon.json
fixtures/variables-changed.icon/: icon.json
plugins/icon-composer/: pyproject.toml
plugins/icon-composer/.claude-plugin/: plugin.json
plugins/icon-composer/.codex-plugin/: plugin.json
plugins/icon-composer/scripts/: create_icon.py  validate_icon.py
plugins/icon-composer/skills/apple-icon-composer/: SKILL.md
plugins/icon-composer/skills/apple-icon-composer/scripts/: pyproject.toml
plugins/icon-composer/skills/apple-icon-composer/scripts/tests/: test_create_icon.py  test_validate_icon.py
plugins/icon-composer/skills/authoring/: SKILL.md
plugins/icon-composer/skills/compose-app-icon/: SKILL.md
plugins/icon-composer/skills/compose-app-icon/scripts/: pyproject.toml
plugins/icon-composer/skills/compose-app-icon/scripts/tests/: test_validate_icon.py
plugins/icon-composer/skills/create/: SKILL.md
plugins/icon-composer/skills/validate/: SKILL.md
plugins/icon-composer/tests/: test_create_icon.py  test_validate_icon.py
